# upredictor-SaraSh

./: CMakeCache.txt  CMakeLists.txt  Makefile  a  cmake_install.cmake  uPredictor.cpp  uPredictor.sln
ALGLIB/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
BayesianFit/: 2016_10_26_participant1_1_3329_3514.csv  BayesianFit.cpp  BaysFitFunctions.cpp  BaysFitFunctions.h  CMakeCache.txt  CMakeLists.txt  MEE.h  MLE-P1-1-1-script.txt  MLE-P1-1-1.txt  MLE-P1-1-2-script.txt  MLE-P1-1-2.txt  MLE-P1-script.txt  MLE-P1.txt  MLE-P2-1-1.txt  MLE-P2-script.txt  MLE-P2.txt  MLE-k0-P1-script.txt  MLE-k0-P1.txt  MLE-k0-P2-script.txt  MLE-k0-P2.txt  MLE-k1-P1-script.txt  MLE-k1-P1.txt  MLE-k1-P2-script.txt  MLE-k1-P2.txt  MLE-k2-P1-script.txt  MLE-k2-P1.txt  MLE-k2-P2-script.txt  MLE-k2-P2.txt  MLE-k3-P1-script.txt  MLE-k3-P1.txt  MLE-k3-P2-script.txt  MLE-k3-P2.txt  MLE-k4-P1-script.txt  MLE-k4-P1.txt  MLE-k4-P2-script.txt  MLE-k4-P2.txt  MLE-k5--P2-script.txt  MLE-k5-P1-script.txt  MLE-k5-P1.txt  MLE-k5-P2.txt  (+10 more)
ChessBoard/: CMakeCache.txt  Makefile  cmake_install.cmake
ColorSegCUDATest/: CMakeCache.txt
CudaApplication/: CMakeCache.txt  Makefile  cmake_install.cmake
EllipseFit/: .Ellipse.cpp.swp  .EllipseFit.sh.swp  .EllipseImplicitFit.cpp.swo  .EllipseImplicitFit.cpp.swp  .SinglefittingParallelMotion.sh.swp  BayesFit-DEvid-scricpt.txt  BayesFit-DEvid3D-scricpt.txt  BayesFit-Evid-k0-k5-nonEllip.txt  BayesFit-Evid-k0.txt  BayesFit-Evid-k1.txt  BayesFit-Evid-k2.txt  BayesFit-Evid-k3.txt  BayesFit-Evid-k4.txt  BayesFit-Evid-k5.txt  BayesFit-Evid-scricpt.txt  BayesFit-Evid.txt  BayesFit-Evid3DP1-scricpt.txt  BayesFit-Evid3DP2-scricpt.txt  BayesFit-EvidP1-scricpt.txt  BayesFit-EvidP2-scricpt.txt  BayesFit-MLE-k0.txt  BayesFit-MLE-k1.txt  BayesFit-MLE-k2.txt  BayesFit-MLE-k3.txt  BayesFit-MLE-k4.txt  BayesFit-MLE-k5.txt  BayesFit-MLE-scricpt.txt  BayesFit-outPts-3D-D-scricpt.txt  BayesFit-outPts-3DP1-scricpt.txt  BayesFit-outPts-3DP2-scricpt.txt  BaysFitFunctions.cpp  BaysFitFunctions.h  CMakeCache.txt  CMakeLists.txt  DhHand.h  Ef10-1.txt  Ef10-2.txt  EfPts.sh  EfPts_workingCopy.sh  Ellipse.cpp  (+115 more)
EllipseFit/EfPts/: 2016_12_14_study_4_Part10_1_428_680_clean_phase1.txt  2016_12_14_study_4_Part10_1_428_680_clean_phase2.txt
EllipseFit/in2dPts/: in2dPts-P1-1-10.txt  in2dPts-P1-1-100.txt  in2dPts-P1-1-101.txt  in2dPts-P1-1-102.txt  in2dPts-P1-1-103.txt  in2dPts-P1-1-104.txt  in2dPts-P1-1-105.txt  in2dPts-P1-1-106.txt  in2dPts-P1-1-107.txt  in2dPts-P1-1-108.txt  in2dPts-P1-1-109.txt  in2dPts-P1-1-11.txt  in2dPts-P1-1-110.txt  in2dPts-P1-1-111.txt  in2dPts-P1-1-112.txt  in2dPts-P1-1-113.txt  in2dPts-P1-1-114.txt  in2dPts-P1-1-115.txt  in2dPts-P1-1-116.txt  in2dPts-P1-1-117.txt  in2dPts-P1-1-118.txt  in2dPts-P1-1-119.txt  in2dPts-P1-1-12.txt  in2dPts-P1-1-120.txt  in2dPts-P1-1-121.txt  in2dPts-P1-1-122.txt  in2dPts-P1-1-123.txt  in2dPts-P1-1-124.txt  in2dPts-P1-1-125.txt  in2dPts-P1-1-126.txt  in2dPts-P1-1-127.txt  in2dPts-P1-1-128.txt  in2dPts-P1-1-129.txt  in2dPts-P1-1-13.txt  in2dPts-P1-1-130.txt  in2dPts-P1-1-131.txt  in2dPts-P1-1-132.txt  in2dPts-P1-1-133.txt  in2dPts-P1-1-134.txt  in2dPts-P1-1-135.txt  (+354 more)
ForwardKinematicsWAM/: ForwardKinematicsWAM  Makefile  cmake_install.cmake
GUIExample/: CMakeCache.txt
GetPos/: CMakeCache.txt  GetPos  Makefile  cmake_install.cmake
PathPlanning/: 10-2.txt  BasicFormulas.h  BasicJacobian.h  CMakeCache.txt  CMakeLists.txt  DH.h  DifferentialIKErrorTerm.h  DifferentialIKTypes.h  DifferentialInverseKinOld.h  DifferentialJacobianErrorTerm.h  DifferentialPositionConstraintPostFilterAt.h  DikProblem.cpp  DikProblem.h  DikProblemFixedBase.cpp  DikProblemFixedBase.h  DikSolver.h  DikSolver.sh  DikSolverEF_P3 (Sara Sheikholeslami's conflicted copy 2021-06-16).sh  DikSolverEF_P3.sh  DikSolverP10.sh  DikSolverP12.sh  DikSolverP2.sh  DikSolversh  EFSolver_P3.sh  Ef10-2.txt  EfPts-To-MbPts-MetaOutFile-Part2.sh  EfPts-To-MbPts-MetaOutFile-Part3.sh  EfPts-To-MbPts-Part10.sh  EfPts-To-MbPts-Part2.sh  EfPts-To-MbPts-Part3.sh  EfPts-to-outEfPts-MB.sh  EfPts-to-outEfPts-Part10.sh  EfPts-to-outEfPts-Part12.sh  EfPts-to-outEfPts.sh  ForwardKin.h  ForwardKinHand.h  IKfitError.txt  IKfitFromElb.h  IKfitFromElbAndWrist.h  IKfitFromElbToLa.h  (+77 more)
PathPlanning/deprecated/: BasePoseSolver.h  BasePoseSolverOld.h  WamIKinSolver.h  WamIkPoseSolver.h  WamIkPoseSolverOld.h  WamIkProblem.h
PathPlanning/outEfPts/: 2016_11_24_study_4_Part2_1_10156_10350_clean_phase1_Ef.txt  2016_11_24_study_4_Part2_1_10156_10350_clean_phase2_Ef.txt  2016_11_24_study_4_Part2_1_10443_10631_clean_phase1_Ef.txt  2016_11_24_study_4_Part2_1_10443_10631_clean_phase2_Ef.txt  2016_11_24_study_4_Part2_1_11870_11993_clean_phase1_Ef.txt  2016_11_24_study_4_Part2_1_11870_11993_clean_phase2_Ef.txt  (+567 more)
UBCAnnotation/: CMakeCache.txt
UBCCamera/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
UBCColorTrackCUDA/: CMakeCache.txt  Makefile  cmake_install.cmake
UBCDART/: Makefile  cmake_install.cmake
UBCGUI/: CMakeCache.txt  Makefile  cmake_install.cmake
UBCKinect/: CMakeCache.txt  Makefile  cmake_install.cmake
UBCKinectGUI/: CMakeCache.txt  Makefile  cmake_install.cmake
UBCSimpleGeometry/: CMakeCache.txt  Makefile  cmake_install.cmake
UBCTrackerCUDA/: CMakeCache.txt  Makefile  cmake_install.cmake
UBCUtil/: CMakeCache.txt  CMakeLists.txt  FindMin.h  ImageChannelBroadcaster.h  ImageChannelProvider.h  LeastSquaresGradient.cpp  LeastSquaresGradient.h  Makefile  ParseCSV.cpp  ParseCSV.h  ParseMathematica.cpp  ParseMathematica.h  UBCUtil.cpp  UBCUtil.h  VideoRescaler.h  cmake_install.cmake  csv.h  setHeader.sh
UBCViconSimpleGeometry/: 2016_10_26_participant1_1_90_407.csv  BallCentroidsOnRack.cpp  BallCentroidsOnRack.h  BallCentroidsOnRamp.cpp  BallCentroidsOnRamp.h  CMakeCache.txt  CMakeLists.txt  Makefile  UBCViconSimpleGeometry.cpp  cmake_install.cmake  newData-script.txt
ViconAnnotator/: 2016_10_26_participant1_1_90_407.csv  CMakeCache.txt  CMakeLists.txt  Makefile  ViconAnnotator.cpp  WristDisplacement.cpp  WristDisplacement.h  a  cmake_install.cmake
uPredictor/: uPredictor.cpp
(+1212 files in other folders)
